--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="game-header">
         <h1 class="game-title">🎮 Tic Tac Toe</h1>
         <div class="game-mode-selector">
-            <button class="mode-btn active" id="humanVsHumanBtn">👥 Human vs Human</button>
-            <button class="mode-btn" id="humanVsAiBtn">🤖 Human vs AI</button>
+            <button class="mode-btn active" id="humanVsHumanBtn">👥 Player vs Player</button>
+            <button class="mode-btn" id="humanVsAiBtn">🤖 Player vs AI</button>
         </div>
         
         <div class="difficulty-selector" id="difficultySelector">
