--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         </div>
     </div>
 
+    <!-- testing -->
+
     <div class="game-header">
         <h1 class="game-title">🎮 Tic Tac Toe</h1>
         <!-- <div class="game-mode-selector">
