fix: resolve reset game bug and enhance AI difficulty

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="modal-content">
             <h2 id="modalTitle">Game Over!</h2>
             <p id="modalMessage">Congratulations!</p>
-            <button class="new-game" onclick="startNewRound()">Play Again</button>
+            <button class="new-game">Play Again</button>
         </div>
     </div>
 
